prototyping interactive controls

--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -1,1 +1,6 @@
 This is the assi-gato controller
+
+<br/>
+
+Torso:
+<input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
