wiring all servos

--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -2,5 +2,8 @@ This is the assi-gato controller
 
 <br/>
 
-Torso:
-<input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+Head Pan: <input id="head_pan" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+Head Tilt: <input id="head_tilt" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+Left Arm: <input id="left_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+Right Arm: <input id="right_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+Torso: <input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
