wiring all rgb leds

--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -3,7 +3,25 @@ This is the assi-gato controller
 <br/>
 
 Head Pan: <input id="head_pan" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+<br/>
 Head Tilt: <input id="head_tilt" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+<br/>
 Left Arm: <input id="left_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+<br/>
 Right Arm: <input id="right_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+<br/>
 Torso: <input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+<br/>
+
+Left Eye (Red): <input id="left_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
+<br/>
+Left Eye (Green): <input id="left_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
+<br/>
+Left Eye (Blue): <input id="left_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
+<br/>
+
+Right Eye (Red): <input id="right_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
+<br/>
+Right Eye (Green): <input id="right_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
+<br/>
+Right Eye (Blue): <input id="right_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()">
