rendering leds on control page

--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -26,6 +26,10 @@
     <p>R G B</p>
   </div>
 
+  <div id="display_container"></div>
+
+  <script>render_led_display()</script>
+
   <div>
     <input value="Rest" type="button" onimput="App.robot_control.rest()">
   </div>
