--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -3,26 +3,26 @@
   <div class="robot_container">
     <img src="assi-gato.png">
 
-    <input id="head_pan" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
-    <input id="head_tilt" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="right_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="left_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.input()">
+    <input id="head_pan" type="range" min="50" max="1000" step="50" oninput="App.robot_control.update_slider()">
+    <input id="head_tilt" type="range" min="50" max="1000" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="right_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="left_arm" type="range" min="50" max="1000" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="torso" type="range" min="50" max="1000" step="50" oninput="App.robot_control.update_slider()">
   </div>
 
   <div class="eye_container">
     <p>Right Eye</p>
-    <input id="right_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="right_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="right_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
+    <input id="right_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="right_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="right_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
     <p>R G B</p>
   </div>
 
   <div class="eye_container">
     <p>Left Eye</p>
-    <input id="left_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="left_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
-    <input id="left_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.input()" orient="vertical">
+    <input id="left_eye_r" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="left_eye_g" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
+    <input id="left_eye_b" type="range" min="0" max="4095" step="50" oninput="App.robot_control.update_slider()" orient="vertical">
     <p>R G B</p>
   </div>
 
