calibration complete, fixing rest button

--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -31,7 +31,7 @@
   <script>render_led_display()</script>
 
   <div>
-    <input value="Rest" type="button" onimput="App.robot_control.rest()">
+    <input value="Rest" type="button" onclick="App.robot_control.rest()">
   </div>
 
 </div>
