--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -30,8 +30,10 @@
 
   <script>render_led_display()</script>
 
-  <div>
-    <input value="Rest" type="button" onclick="App.robot_control.rest()">
+  <div class="button_container">
+    <input value="Reset" type="button" onclick="App.robot_control.reset_pwm()">
+    <input value="Idle" type="button" onclick="App.robot_control.idle_pwm()">
+    <input value="Talk" type="button" onclick="App.robot_control.talk()">
   </div>
 
 </div>
