adding letters to the led display

--- a/app/assets/stylesheets/robot-control.scss
+++ b/app/assets/stylesheets/robot-control.scss
@@ -61,6 +61,11 @@ div.led_display_container
     width: 21px;
     float: left;
   }
+
+  .led_display_character
+  {
+    margin: 5px 20px;
+  }
 }
 
 div.button_container
