--- a/app/views/application/robot_control.html.erb
+++ b/app/views/application/robot_control.html.erb
@@ -71,6 +71,7 @@
     <input value="Reset" type="button" onclick="App.robot_control.reset_pwm()">
     <input value="Idle" type="button" onclick="App.robot_control.idle_pwm()">
     <input value="Hello" type="button" onclick="App.robot_control.talk('hello, my name is assigato,,  i am a robot,, beep boop')">
+    <input value="Address" type="button" onclick="App.robot_control.display_address()">
 
     <br/>
 
