--- a/htdocs/styles/robot-control.less
+++ b/htdocs/styles/robot-control.less
@@ -46,7 +46,7 @@ div.eye_container
   }
 }
 
-div.led_display_container
+#led_display_container
 {
   p { margin: 5px 0 5px 0; }
 
@@ -60,6 +60,19 @@ div.led_display_container
   {
     width: 21px;
     float: left;
+  }
+
+  .led_pixel
+  {
+    width: 20px;
+    height: 20px;
+    background: url('../led-off.png') left top no-repeat;
+    box-sizing: border-box;
+  }
+
+  .led_pixel[data-on='1']
+  {
+    background: url('../led-on.png');
   }
 
   .led_display_character
